--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
